--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "voice-light-echo",
+  "name": "v01c3",
   "version": "1.1.1",
-  "description": "voice-light-echo",
+  "description": "v01c3",
   "main": "index.js",
   "scripts": {
     "build": "webpack --config webpack.config.prod.js",
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/conjuspace/voice-light-echo"
+    "url": "git+git@github.com:OlehPshyk/v01c3.git"
   },
   "author": "Oleh Pshyk",
   "license": "MIT License",
