--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+git@github.com:OlehPshyk/v01c3.git"
+    "url": "git+https://github.com/OlehPshyk/v01c3"
   },
   "author": "Oleh Pshyk",
   "license": "MIT License",
